<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".features.auth.AuthActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_login"
        android:hint="@string/hint_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tl_password"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        app:layout_constraintTop_toBottomOf="@id/text_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:layout_marginTop="16dp"
        android:text="@string/button_login"
        app:layout_constraintTop_toBottomOf="@id/tl_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_unauthorized"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_unauthorized"
        android:layout_marginTop="16dp"
        android:text="@string/button_login_anonymous"
        app:layout_constraintTop_toBottomOf="@id/tl_password"
        app:layout_constraintStart_toEndOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_unauthorized"
        tools:visibility="visible"/>
</android.support.constraint.ConstraintLayout>